--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Aulas de desenvovimento back-end parte 01",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Joel-Santos/turma165UC04/issues"
   },
-  "homepage": "https://github.com/Joel-Santos/turma165UC04#readme"
+  "homepage": "https://github.com/Joel-Santos/turma165UC04#readme",
+  "dependencies": {
+    "prompt-sync": "^4.2.0"
+  }
 }
